--- a/src/Clients/store-angular/src/app/components/common/topbar/topbar.component.html
+++ b/src/Clients/store-angular/src/app/components/common/topbar/topbar.component.html
@@ -4,26 +4,35 @@
       <a class="navbar-item" href="../">
         <img src="http://bulma.io/images/bulma-logo.png" alt="Bulma: a modern CSS framework based on Flexbox">
       </a>
+    
       <div class="navbar-burger burger" data-target="navMenu">
         <span></span>
         <span></span>
         <span></span>
       </div>
     </div>
+
     <div class="navbar-menu" id="navMenu">
       <div class="navbar-end">
-        <div class="navbar-item has-dropdown is-hoverable">
-          <a class="navbar-link" [routerLink]="['/account']">Account</a>
-          <div class="navbar-dropdown">
-            <a class="navbar-item" [routerLink]="['/shopping-cart']">
-              <i class="fas fa-shopping-cart"></i>Cart</a>
-            <a class="navbar-item" [routerLink]="['/orders']">Orders</a>
-            <hr class="navbar-divider">
-            <div class="navbar-item">
-              <a (click)="logout()">Logout</a>
+        <ng-container *ngIf="authService.isAuthenticated()">
+          <div class="navbar-item has-dropdown is-hoverable">
+            <a class="navbar-link" [routerLink]="['/account']">Account</a>
+            <div class="navbar-dropdown">
+              <a class="navbar-item" [routerLink]="['/shopping-cart']">
+                <i class="fas fa-shopping-cart"></i>Cart</a>
+              <a class="navbar-item" [routerLink]="['/orders']">Orders</a>
+              <hr class="navbar-divider">
+              <div class="navbar-item">
+                <a (click)="logout()">Logout</a>
+              </div>
             </div>
           </div>
-        </div>
+        </ng-container>
+        <ng-container *ngIf="!authService.isAuthenticated()">
+          <div class="navbar-item">
+            <a class="navbar-item" [routerLink]="['/login']">Login</a>
+          </div>
+        </ng-container>
       </div>
     </div>
   </div>
