--- a/src/Clients/store-angular/src/app/shared/searchbar/searchbar.component.html
+++ b/src/Clients/store-angular/src/app/shared/searchbar/searchbar.component.html
@@ -5,7 +5,7 @@
         <div class="card-content">
           <div class="content">
             <div class="control has-icons-left has-icons-right">
-              <input class="input is-large" type="search" placeholder="">
+              <input #search class="input is-large" type="search" placeholder="" (keyup.enter)="performFilter(search.value)">
               <span class="icon is-medium is-left">
                 <i class="fa fa-search"></i>
               </span>
