--- a/src/Clients/store-angular/src/app/shared/navbar/navbar.component.html
+++ b/src/Clients/store-angular/src/app/shared/navbar/navbar.component.html
@@ -1,57 +1,7 @@
 <nav class="level is-mobile">
-  <div class="level-item has-text-centered">
-    <a class="navbar-item" [routerLink]="['/categories/mens']">
-      Men's
-    </a>
-  </div>
-  <div class="level-item has-text-centered">
-    <a class="navbar-item" [routerLink]="['/categories/womens']">
-      Women's
-    </a>
-  </div>
-  <div class="level-item has-text-centered">
-    <a class="navbar-item" [routerLink]="['/categories/kids-and-babies']">
-      Kids & Babies
-    </a>
-  </div>
-  <div class="level-item has-text-centered">
-    <a class="navbar-item" [routerLink]="['/categories/device-cases']">
-      Devices Cases
-    </a>
-  </div>
-  <div class="level-item has-text-centered">
-    <a class="navbar-item" [routerLink]="['/categories/stickers']">
-      Stickers
-    </a>
-  </div>
-  <div class="level-item has-text-centered">
-    <a class="navbar-item" [routerLink]="['/categories/greetin-cards']">
-      Greeting Cards
-    </a>
-  </div>
-  <div class="level-item has-text-centered">
-    <a class="navbar-item" [routerLink]="['/categories/wall-art']">
-      Wall Art
-    </a>
-  </div>
-  <div class="level-item has-text-centered">
-    <a class="navbar-item" [routerLink]="['/categories/home-decor']">
-      Home Decor
-    </a>
-  </div>
-  <div class="level-item has-text-centered">
-    <a class="navbar-item" [routerLink]="['/categories/stationery']">
-      Stationery
-    </a>
-  </div>
-  <div class="level-item has-text-centered">
-    <a class="navbar-item" [routerLink]="['/categories/bags']">
-      Bags
-    </a>
-  </div>
-  <div class="level-item has-text-centered">
-    <a class="navbar-item" [routerLink]="['/categories/gifts']">
-      Gifts
+  <div class="level-item has-text-centered" *ngFor="let category of categories">
+    <a class="navbar-item" [routerLink]="['/categories', category.categoryFriendlyName]">
+      {{category.categoryName}}
     </a>
   </div>
 </nav>
