--- a/src/Clients/store-angular/src/app/pages/categories-page/categories-page.component.html
+++ b/src/Clients/store-angular/src/app/pages/categories-page/categories-page.component.html
@@ -1,1 +1,5 @@
-<app-product-list></app-product-list>
+<section>
+    <h1 class="title is-1">{{category?.categoryName}}</h1>
+</section>
+<hr/>
+<app-product-list [products]=products></app-product-list>
