--- a/src/Clients/store-angular/src/app/shared/navbar/navbar.component.html
+++ b/src/Clients/store-angular/src/app/shared/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="level is-mobile">
   <div class="level-item has-text-centered" *ngFor="let category of categories">
-    <a class="navbar-item" [routerLink]="['/categories', category.categoryFriendlyName]">
+    <a class="navbar-item" [routerLink]="['/categories', category.categoryUri]">
       {{category.categoryName}}
     </a>
   </div>
