--- a/src/Clients/store-angular/src/app/pages/shoppingcart-page/shoppingcart-page.component.html
+++ b/src/Clients/store-angular/src/app/pages/shoppingcart-page/shoppingcart-page.component.html
@@ -25,7 +25,7 @@
         <tr *ngFor="let item of cart.itens">
           <td>{{item.product.productName}}</td>
           <td>
-            <input type="number" ng-value="[item.quantity]">
+            <input type="number" value={{item.quantity}}>
           </td>
           <td>{{item.total | currency:'AUD':true:'1.2-2'}}</td>
           <td>
